Add divs and classes into HTML
4 divs are created with classes title. outline, display and digit.

--- a/calculator.html
+++ b/calculator.html
@@ -6,9 +6,14 @@
         <title>Calculator</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="calculator.css">
     </head>
     <body>
+    <div class="title">Calculator</div>
+    <div class="outline">
+    <div class="display"></div>
+    <div class="digits"></div>
+    </div>
     <script src="calculator.js" async defer></script>
     </body>
 </html>
