Given Style to display and digits

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,24 @@
     <div class="title">Calculator</div>
     <div class="outline">
     <div class="display"></div>
-    <div class="digits"></div>
+    <div class="container">
+    <button class="clear">Delete</button>
+    <button class="clear">Clear</button>
+    </div>
+    <div class="digits">
+    <button class="digit">9</button>
+    <button class="digit">8</button>
+    <button class="digit">7</button>
+    <button class="digit">6</button>
+    <button class="digit">5</button>
+    <button class="digit">4</button>
+    <button class="digit">3</button>
+    <button class="digit">2</button>
+    <button class="digit">1</button>
+    </div>
+    <div class="zeroes">
+    <button class="zero">0</button>
+    <button class="zero">00</button>
     </div>
     <script src="calculator.js" async defer></script>
     </body>
