--- a/calculator.html
+++ b/calculator.html
@@ -16,20 +16,28 @@
     <button class="clear">Delete</button>
     <button class="clear">Clear</button>
     </div>
+    <div class="container2">
     <div class="digits">
     <button class="digit">9</button>
     <button class="digit">8</button>
     <button class="digit">7</button>
+    <button class="digit">+</button>
     <button class="digit">6</button>
     <button class="digit">5</button>
     <button class="digit">4</button>
+    <button class="digit">-</button>
     <button class="digit">3</button>
     <button class="digit">2</button>
     <button class="digit">1</button>
+    <button class="digit">×</button>
     </div>
     <div class="zeroes">
     <button class="zero">0</button>
     <button class="zero">00</button>
+    <button class="zero">.</button>
+    <button class="zero">÷</button>
+    </div>
+    <button class="solution">=</button>
     </div>
     <script src="calculator.js" async defer></script>
     </body>
