--- a/calculator.html
+++ b/calculator.html
@@ -18,24 +18,24 @@
     </div>
     <div class="container2">
     <div class="digits">
-    <button class="digit">9</button>
-    <button class="digit">8</button>
-    <button class="digit">7</button>
-    <button class="digit">+</button>
-    <button class="digit">6</button>
-    <button class="digit">5</button>
-    <button class="digit">4</button>
-    <button class="digit">-</button>
-    <button class="digit">3</button>
-    <button class="digit">2</button>
-    <button class="digit">1</button>
-    <button class="digit">×</button>
+    <button id="seven" class="digit">7</button>
+    <button id="eight" class="digit">8</button>
+    <button id="nine" class="digit">9</button>
+    <button id="add" class="digit">+</button>
+    <button id="four" class="digit">4</button>
+    <button id="five" class="digit">5</button>
+    <button id="six" class="digit">6</button>
+    <button id="subt" class="digit">-</button>
+    <button id="one" class="digit">1</button>
+    <button id="two" class="digit">2</button>
+    <button id="three" class="digit">3</button>
+    <button id="multi" class="digit">×</button>
     </div>
     <div class="zeroes">
-    <button class="zero">0</button>
-    <button class="zero">00</button>
-    <button class="zero">.</button>
-    <button class="zero">÷</button>
+    <button id="zero" class="zero">0</button>
+    <button id="double" class="zero">00</button>
+    <button id="decimal" class="zero">.</button>
+    <button id="divide" class="zero">÷</button>
     </div>
     <button class="solution">=</button>
     </div>
