Changed some elements classes
Classes are modified due to different usages in javascript function

--- a/calculator.html
+++ b/calculator.html
@@ -21,21 +21,21 @@
     <button id="seven" class="digit">7</button>
     <button id="eight" class="digit">8</button>
     <button id="nine" class="digit">9</button>
-    <button id="add" class="digit">+</button>
+    <button id="add" class=" operand">+</button>
     <button id="four" class="digit">4</button>
     <button id="five" class="digit">5</button>
     <button id="six" class="digit">6</button>
-    <button id="subt" class="digit">-</button>
+    <button id="subt" class="operand">-</button>
     <button id="one" class="digit">1</button>
-    <button id="two" class="digit">2</button>
+    <button id="two" class="digit two">2</button>
     <button id="three" class="digit">3</button>
-    <button id="multi" class="digit">×</button>
+    <button id="multi" class="operand">*</button>
     </div>
     <div class="zeroes">
     <button id="zero" class="zero">0</button>
-    <button id="double" class="zero">00</button>
-    <button id="decimal" class="zero">.</button>
-    <button id="divide" class="zero">÷</button>
+    <button id="double" class="operand">%</button>
+    <button id="decimal" class="operand">.</button>
+    <button id="divide" class="operand">÷</button>
     </div>
     <button class="solution">=</button>
     </div>
