Implemented clear function

--- a/calculator.html
+++ b/calculator.html
@@ -14,14 +14,14 @@
     <div class="display"></div>
     <div class="container">
     <button class="clear">Delete</button>
-    <button class="clear">Clear</button>
+    <button class="clear clear1">Clear</button>
     </div>
     <div class="container2">
     <div class="digits">
     <button id="seven" class="digit">7</button>
     <button id="eight" class="digit">8</button>
     <button id="nine" class="digit">9</button>
-    <button id="add" class=" operand">+</button>
+    <button id="add" class="operand">+</button>
     <button id="four" class="digit">4</button>
     <button id="five" class="digit">5</button>
     <button id="six" class="digit">6</button>
@@ -32,10 +32,10 @@
     <button id="multi" class="operand">*</button>
     </div>
     <div class="zeroes">
-    <button id="zero" class="zero">0</button>
+    <button id="zero" class="digit">0</button>
     <button id="double" class="operand">%</button>
     <button id="decimal" class="operand">.</button>
-    <button id="divide" class="operand">÷</button>
+    <button id="divide" class="operand">/</button>
     </div>
     <button class="solution">=</button>
     </div>
